Fixed screenshots header covering close button on project page

--- a/assets/css/projectpages.css
+++ b/assets/css/projectpages.css
@@ -506,7 +506,7 @@
     top: -20px;
     right: 0px;
     padding-right: var(--defaultpadding);
-    z-index: 999;
+    z-index: 2;
     transform: translateY(-50%);
     text-shadow:
         0px 1px 0px lightgray,
